zta/microservice6/k8s/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zta-microservice5
spec:
  selector:
    matchLabels:
      app: zta-microservice5
  action: ALLOW
  rules:
  - from:
    - source:
        principals: [
          "cluster.local/ns/default/sa/app1-microservice3",
          "cluster.local/ns/default/sa/app2-microservice1",
          "cluster.local/ns/default/sa/app2-microservice2",
          "cluster.local/ns/default/sa/app2-microservice4",
          "cluster.local/ns/default/sa/app3-microservice3",
          "cluster.local/ns/default/sa/app4-microservice3",
          "cluster.local/ns/default/sa/app4-microservice5",
          "cluster.local/ns/default/sa/app5-microservice1",
          "cluster.local/ns/default/sa/app5-microservice5",
          "cluster.local/ns/default/sa/app6-microservice2",
          "cluster.local/ns/default/sa/app6-microservice5",
          "cluster.local/ns/default/sa/app7-microservice4",
          "cluster.local/ns/default/sa/app8-microservice5",
          "cluster.local/ns/default/sa/zta-microservice2",
          "cluster.local/ns/default/sa/zta-microservice5",
          "cluster.local/ns/default/sa/zta-microservice7",
        ]
